Crash with new Menu Search functionality #75222

Closed
opened 2020-03-30 19:59:58 +02:00 by marcuspollio · 8 comments
Member

System Information
Operating system: Linux-5.4.0-4-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Mesa DRI Intel(R) UHD Graphics 630 (Coffeelake 3x8 GT2) Intel Open Source Technology Center 4.6 (Core Profile) Mesa 19.3.3

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-29 21:36, hash: a103d09df4
Worked: it is a new feature

Short description of error
Using the new Menu Search crashes Blender at shortcut call (F3)

Exact steps for others to reproduce the error

  • Load Blender with defaults
  • In Preferences, activate the Experimental section and set the UI Search Menu (#74157) on.
  • Press the F3 shortcut to test the new Search Menu.
    Notice that it does not always crash at the first time. Sometimes when calling F3 2-3 times in a row, or when closing the Preferences window and reopening it again, or when deactivating the new Search Menu option and activating again.

Hope it helps:

  GNU nano 4.8                                                             /tmp/blender.crash.txt                                                                      
# Blender 2.83 (sub 11), Commit date: 2020-03-29 21:36, Hash a103d09df485
Traceback (most recent call last):
  File "/home/XXX/blender-2.83-a103d09df485-linux64/2.83/scripts/startup/bl_ui/space_topbar.py", line 211, in draw
    if getattr(context.area, "show_menus"):
AttributeError: 'NoneType' object has no attribute 'show_menus'

location: <unknown location>:-1
  # Error

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x7411a9d]
./blender() [0x16b78a2]
/lib/x86_64-linux-gnu/libc.so.6(+0x3b7e0) [0x7f2cb64817e0]
./blender(BLI_remlink+0x24) [0x73d9794]
./blender(UI_but_func_menu_search+0x555) [0x1fc8bc5]
./blender() [0x197c1bd]
./blender(ui_popup_block_refresh+0x74) [0x1fb57b4]
./blender(ui_popup_block_create+0x148) [0x1fb6cd8]
./blender(UI_popup_block_invoke_ex+0x49) [0x1fb4959]
./blender() [0x197bfdf]
./blender() [0x196698d]
./blender() [0x19697c5]
./blender() [0x196ac59]
./blender() [0x196afec]
./blender(wm_event_do_handlers+0x63e) [0x196ba2e]
./blender(WM_main+0x20) [0x19624c0]
./blender(main+0x321) [0x15ee731]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f2cb646ce0b]
./blender() [0x16b40cc]


Thanks !

**System Information** Operating system: Linux-5.4.0-4-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Mesa DRI Intel(R) UHD Graphics 630 (Coffeelake 3x8 GT2) Intel Open Source Technology Center 4.6 (Core Profile) Mesa 19.3.3 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-29 21:36, hash: `a103d09df4` Worked: it is a new feature **Short description of error** Using the new Menu Search crashes Blender at shortcut call (F3) **Exact steps for others to reproduce the error** - Load Blender with defaults - In Preferences, activate the Experimental section and set the UI Search Menu (#74157) on. - Press the F3 shortcut to test the new Search Menu. Notice that it does not always crash at the first time. Sometimes when calling F3 2-3 times in a row, or when closing the Preferences window and reopening it again, or when deactivating the new Search Menu option and activating again. Hope it helps: ``` GNU nano 4.8 /tmp/blender.crash.txt # Blender 2.83 (sub 11), Commit date: 2020-03-29 21:36, Hash a103d09df485 Traceback (most recent call last): File "/home/XXX/blender-2.83-a103d09df485-linux64/2.83/scripts/startup/bl_ui/space_topbar.py", line 211, in draw if getattr(context.area, "show_menus"): AttributeError: 'NoneType' object has no attribute 'show_menus' location: <unknown location>:-1 # Error # backtrace ./blender(BLI_system_backtrace+0x1d) [0x7411a9d] ./blender() [0x16b78a2] /lib/x86_64-linux-gnu/libc.so.6(+0x3b7e0) [0x7f2cb64817e0] ./blender(BLI_remlink+0x24) [0x73d9794] ./blender(UI_but_func_menu_search+0x555) [0x1fc8bc5] ./blender() [0x197c1bd] ./blender(ui_popup_block_refresh+0x74) [0x1fb57b4] ./blender(ui_popup_block_create+0x148) [0x1fb6cd8] ./blender(UI_popup_block_invoke_ex+0x49) [0x1fb4959] ./blender() [0x197bfdf] ./blender() [0x196698d] ./blender() [0x19697c5] ./blender() [0x196ac59] ./blender() [0x196afec] ./blender(wm_event_do_handlers+0x63e) [0x196ba2e] ./blender(WM_main+0x20) [0x19624c0] ./blender(main+0x321) [0x15ee731] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f2cb646ce0b] ./blender() [0x16b40cc] ``` Thanks !
Author
Member

Added subscriber: @marcuspollio

Added subscriber: @marcuspollio
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the problem.


Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006

I can't reproduce the problem. --- **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006
Author
Member

Thanks Germano for testing.

With version: 2.83 (sub 11), branch: master, commit date: 2020-03-31 23:07, hash: da3cb514e5 the crash is unfortunately still present when pressing F3.

I happens mostly directly when the Preferences Window is open.

Was can I test to help identify the issue ?

Thanks Germano for testing. With version: 2.83 (sub 11), branch: master, commit date: 2020-03-31 23:07, hash: `da3cb514e5` the crash is unfortunately still present when pressing F3. I happens mostly directly when the Preferences Window is open. Was can I test to help identify the issue ?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ca0dcd830c

This issue was referenced by ca0dcd830c5e880b9ea25d4b95a581b2aaeef4e4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-01 12:01:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75222
No description provided.