Fix T75222: Crash activating menu search